tests/fail/assert_too_many_arg.avm
; assert with too many arguments
assert double(0.24) int32(0)
assert double(0.24) int32(0) int32(0) int32(0) int32(0) int32(0) int32(0)
assert double(0.24) int32(0) int32(0) int32(0) int32(0) int32(0) int32(0)double(0.24) int32(0) int32(0) int32(0) int32(0) int32(0) int32(0)double(0.24) int32(0) int32(0) int32(0) int32(0) int32(0) int32(0)double(0.24) int32(0) int32(0) int32(0) int32(0) int32(0) int32(0)double(0.24) int32(0) int32(0) int32(0) int32(0) int32(0) int32(0)double(0.24) int32(0) int32(0) int32(0) int32(0) int32(0) int32(0)
